[gd_scene load_steps=14 format=3 uid="uid://xca3loiv75iq"]

[ext_resource type="Script" uid="uid://c84mpfb0w2fk8" path="res://scenes/boulder/boulder.gd" id="1_785x2"]
[ext_resource type="Texture2D" uid="uid://bxm7sl8qkulf3" path="res://graphics/boulders/boulder_1.png" id="1_vqm6d"]
[ext_resource type="Texture2D" uid="uid://clwn7cdnq8fhx" path="res://graphics/boulders/boulder_2.png" id="2_785x2"]
[ext_resource type="Texture2D" uid="uid://bhgdibatmklof" path="res://graphics/boulders/shadow_boulder.png" id="2_tirnv"]
[ext_resource type="Texture2D" uid="uid://cx1qkeh1pyq55" path="res://graphics/boulders/boulder_3.png" id="3_tirnv"]
[ext_resource type="Texture2D" uid="uid://dt0eynhgvjtds" path="res://graphics/boulders/boulder_breaking.png" id="6_gb4b6"]
[ext_resource type="AudioStream" uid="uid://jj22osh7w5qk" path="res://sounds/boulder_break.wav" id="7_qx6ih"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gb4b6"]

[sub_resource type="Animation" id="Animation_tirnv"]
resource_name = "Boulder1_sparkle"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boulder1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.03333, 6.4, 6.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_qx6ih"]
resource_name = "Boulder2_sparkle"
length = 11.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boulder2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10, 10.1667, 10.4333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_gb4b6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boulder1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Boulder2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BoulderBreaking:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mhorw"]
resource_name = "break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoulderBreaking:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qx6ih"]
_data = {
&"Boulder1_sparkle": SubResource("Animation_tirnv"),
&"Boulder2_sparkle": SubResource("Animation_qx6ih"),
&"RESET": SubResource("Animation_gb4b6"),
&"break": SubResource("Animation_mhorw")
}

[node name="Boulder" type="StaticBody2D"]
collision_layer = 16
collision_mask = 45
script = ExtResource("1_785x2")

[node name="ShadowBoulder" type="Sprite2D" parent="."]
modulate = Color(0.241156, 0.241156, 0.241156, 1)
position = Vector2(3, -7)
scale = Vector2(1.08312, 1.04994)
texture = ExtResource("2_tirnv")

[node name="Boulder1" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -7)
texture = ExtResource("1_vqm6d")
hframes = 3

[node name="Boulder2" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -7)
texture = ExtResource("2_785x2")
hframes = 3

[node name="Boulder3" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -7)
texture = ExtResource("3_tirnv")

[node name="BoulderBreaking" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_gb4b6")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 0.00829922
scale = Vector2(-0.792047, -0.494288)
shape = SubResource("CircleShape2D_gb4b6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qx6ih")
}

[node name="Timer" type="Timer" parent="."]

[node name="BoulderBreak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qx6ih")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
